--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,30 +1,30 @@
-
-cmake_minimum_required(VERSION 3.21)
+cmake_minimum_required(VERSION 3.20)
 
 ##################################################################################
 # Project details
+
+# TODO: Add project documentation website in HOMEPAGE_URL
+# TODO : Add project description
+# TODO: Configure automated version adjustment from a version.txt file
 ##################################################################################
-#
-# Project details
-#
 
 project(
-  container
+  XSTL
   VERSION 0.1.0
-  DESCRIPTION "An extension to the standard container library in c++"
-  HOMEPAGE_URL ""
+  DESCRIPTION ""
   LANGUAGES CXX
 )
 
 ##################################################################################
 # MAIN_PROJECT CHECK
 
-## determine if project is built as a subproject (using add_subdirectory) or if it is the main project
+# determine if project is built as a subproject (using add_subdirectory) or if it is the main project
 ##################################################################################
 
 set(MAIN_PROJECT OFF)
 if (CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
     set(MAIN_PROJECT ON)
+    message(STATUS "XSTL is being built as a main project")
 endif()
 
 ##################################################################################
@@ -33,42 +33,32 @@ endif()
 
 set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/scripts/cmake ${CMAKE_MODULE_PATH})
 message(STATUS "Module path is set to: ${CMAKE_MODULE_PATH}")
-include(StaticAnalyzers)
 include(Utils)
+
 ##################################################################################
 # Set project options
 ##################################################################################
 
-option(BuildExe "Build the project as an executable, rather than a library." OFF)
-option(BuildHeadersOnly "Build the project as a header-only library." OFF)
-option(UseAltNames "Use alternative names for the project, such as naming the include directory all lowercase." ON)
-option(WarningsAsErrors "Treat compiler warnings as errors." OFF)
+set(XSTL_TARGET ${PROJECT_NAME})
+
+option(XSTLUseAltNames "Use alternative names for the project, such as naming the include directory all lowercase." ON)
 
 # Package Managers
-option(EnableConan "Enable the Conan package manager for this project." OFF)
-option(EnableVcPkg "Enable the Vcpkg package manager for this project." OFF)
+option(XSTLEnableConan "Enable the Conan package manager for this project." OFF)
+option(XSTLEnableVcPkg "Enable the Vcpkg package manager for this project." OFF)
 
-option(EnableTesting "Enable unit tests for the projects (from the `test` subfolder)." ${MAIN_PROJECT})
-option(EnableCi "Enable CI build targets." OFF)
-
-option(UseGTest "Use the GoogleTest library for creating unit tests." ON)
-option(UseGMock "Use the GoogleMock library for extending the unit tests." OFF)
-option(UseCatch2 "Use the Catch2 library for creating unit tests." OFF)
-option(UseDoctest "Use the Doctest library for creating unit tests." OFF)
-
-option(EnableClangTidy "Enable static analysis with Clang-Tidy." OFF)
-option(EnableCppCheck "Enable static analysis with Cppcheck." OFF)
-
-option(EnableCodeCoverage "Enable code coverage through GCC." OFF)
-
-option(EnableDoxygen "Enable Doxygen documentation builds of source." OFF)
+# TODO : EnableTesting should be OFF, it is ON for now when project is not built as a subproject
+# prior to release 1.0.0 this option should be turned off
+option(XSTLEnableTesting "Enable unit tests for the projects (from the `test` subfolder)." OFF)
+option(XSTLEnableCi "Enable CI build targets." OFF)
+option(XSTLEnableDoxygen "Enable Doxygen documentation builds of source." OFF)
 
 # Generate compile_commands.json for clang based tools
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-option(VerboseOutput "Enable verbose output, allowing for a better understanding of each step taken." ON)
-option(GenerateExportHeader "Create a `project_export.h` file containing all exported symbols." OFF)
-option(EnableLTO "Enable Interprocedural Optimization, aka Link Time Optimization (LTO)." OFF)
-option(EnableCCache "Enable the usage of Ccache, in order to speed up rebuild times." ON)
+option(XSTLVerboseOutput "Enable verbose output, allowing for a better understanding of each step taken." ON)
+option(XSTLGenerateExportHeader "Create a `project_export.h` file containing all exported symbols." OFF)
+option(XSTLEnableLTO "Enable Interprocedural Optimization, aka Link Time Optimization (LTO)." OFF)
+option(XSTLEnableCCache "Enable the usage of Ccache, in order to speed up rebuild times." ON)
 
 # Export all symbols when building a shared library
 if(BUILD_SHARED_LIBS)
@@ -77,7 +67,7 @@ if(BUILD_SHARED_LIBS)
   set(CMAKE_VISIBILITY_INLINES_HIDDEN 1)
 endif()
 
-if(EnableLTO)
+if(XSTLEnableLTO)
   include(CheckIPOSupported)
   check_ipo_supported(RESULT result OUTPUT output)
   if(result)
@@ -96,23 +86,26 @@ endif()
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE "Debug")
 endif()
-message(STATUS "Started CMake for ${PROJECT_NAME} v${PROJECT_VERSION}...\n")
+message(STATUS "Started CMake for ${XSTL_TARGET} v${PROJECT_VERSION}...\n")
 
-if (UNIX)
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+  if (UNIX)
     add_compile_options("$<$<CONFIG:DEBUG>:-D_DEBUG>")    #this will allow to use same _DEBUG macro available in both Linux as well as Windows - MSCV environment. Easy to put Debug specific code.
-endif (UNIX)
+  endif (UNIX)  
+  message(STATUS "_DEBUG macro is added for debugging specific code\n")
+endif(CMAKE_BUILD_TYPE STREQUAL "Debug")
 
 
 #
 # Setup alternative names
 #
 
-if(UseAltNames)
-  string(TOLOWER ${PROJECT_NAME} PROJECT_NAME_LOWERCASE)
-  string(TOUPPER ${PROJECT_NAME} PROJECT_NAME_UPPERCASE)
+if(XSTLUseAltNames)
+  string(TOLOWER ${XSTL_TARGET} PROJECT_NAME_LOWERCASE)
+  string(TOUPPER ${XSTL_TARGET} PROJECT_NAME_UPPERCASE)
 else()
-  set(PROJECT_NAME_LOWERCASE ${PROJECT_NAME})
-  set(PROJECT_NAME_UPPERCASE ${PROJECT_NAME})
+  set(PROJECT_NAME_LOWERCASE ${XSTL_TARGET})
+  set(PROJECT_NAME_UPPERCASE ${XSTL_TARGET})
 endif()
 
 #
@@ -127,9 +120,9 @@ endif()
 # Build CI/CD targets
 ##################################################################################
 
-if (EnableCi)
-    include(ci)
-endif ()
+if(XSTLEnableCi)
+  include(ci)
+endif(XSTLEnableCi)
 
 ##################################################################################
 # Enable package managers
@@ -138,52 +131,54 @@ endif ()
 include(Conan)
 include(Vcpkg)
 
-
 ##################################################################################
 # Add configuration related header files
 ##################################################################################
 
+set(VERSION_CONFIG_IN "${CMAKE_CURRENT_LIST_DIR}/scripts/cmake/config/version.h.in")
+set(VERSION_CONFIG_OUT "${CMAKE_CURRENT_SOURCE_DIR}/include/xstl/config/version.h")
+set(VERSION_CONFIG_INSTALL_LOCATION "include/xstl/config")
+
+set(XSTL_CONFIG_IN "${CMAKE_CURRENT_LIST_DIR}/scripts/cmake/config/config.h.in")
+set(XSTL_CONFIG_OUT "${CMAKE_CURRENT_SOURCE_DIR}/include/xstl/config/config.h")
+set(XSTL_CONFIG_INSTALL_LOCATION "include/xstl/config")
+
 #
 # Add version header
-
-## Only if project is built as a main project
 #
 
-if(MAIN_PROJECT)
-    configure_file(
-      ${CMAKE_CURRENT_LIST_DIR}/include/config/version.h.in
-      ${CMAKE_CURRENT_SOURCE_DIR}/include/config/version.h
-      @ONLY
-    )
-    install(
-      FILES
-      ${CMAKE_CURRENT_SOURCE_DIR}/include/config/version.h
-      DESTINATION
-      include/config
-    )
-endif()
+configure_file(
+  ${VERSION_CONFIG_IN}
+  ${VERSION_CONFIG_OUT}
+  @ONLY
+)
+
+install(
+  FILES
+  ${VERSION_CONFIG_OUT}
+  DESTINATION
+  ${VERSION_CONFIG_INSTALL_LOCATION}
+)
 
 #
 # Add config header
-
 ## Only if project is built as a main project
 #
 
-if(MAIN_PROJECT)
-    configure_file(
-      ${CMAKE_CURRENT_LIST_DIR}/include/config/config.h.in
-      ${CMAKE_CURRENT_SOURCE_DIR}/include/config/config.h
-    )
-    install(
-      FILES
-      ${CMAKE_CURRENT_SOURCE_DIR}/include/config/config.h
-      DESTINATION
-      include/config
-    )
-endif()
+configure_file(
+  ${XSTL_CONFIG_IN}
+  ${XSTL_CONFIG_OUT}
+  @ONLY
+)
 
-verbose_message("Successfully generated configuration files.")
+install(
+  FILES
+  ${XSTL_CONFIG_OUT}
+  DESTINATION
+  ${XSTL_CONFIG_INSTALL_LOCATION}
+)
 
+verbose_message("Successfully generated configuration files for ${XSTL_TARGET}.")
 
 ##################################################################################
 # Create library, setup headers and source files
@@ -193,55 +188,62 @@ verbose_message("Successfully generated configuration files.")
 # Find all headers and implementation files
 #
 
-file(GLOB_RECURSE CONTAINER_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/include/container/*")
-file(GLOB_RECURSE CONFIG_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/include/config/*.h")
+file(GLOB XSTL_HEADER_FILES "include/xstl/*.hpp")
+file(GLOB_RECURSE XSTL_SOURCE_FILES "src/*.cpp")
+file(GLOB XSTL_CONFIG_HEADER_FILES "include/xstl/config/*.h")
 
-set(HEADER_FILES ${CONTAINER_HEADER_FILES} ${CONFIG_HEADER_FILES})
-set(INC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
-
-add_library(${PROJECT_NAME} INTERFACE)
-
-if(VerboseOutput)
+add_library(${XSTL_TARGET} ${XSTL_SOURCE_FILES})
+if(XSTLVerboseOutput)
     verbose_message("Found the following headers:")
-    
-    foreach(HEADER_FILE ${HEADER_FILES})
+    foreach(HEADER_FILE ${XSTL_HEADER_FILES})
         verbose_message("* ${HEADER_FILE}")
     endforeach()
-endif()
 
-message(STATUS "Added all header and implementation files.\n")
+    if(XSTL_SOURCE_FILES)
+      verbose_message("Found the following sources:")
+      foreach(SOURCE_FILE ${XSTL_SOURCE_FILES})
+        verbose_message("* ${SOURCE_FILE}")
+      endforeach()
+    endif(XSTL_SOURCE_FILES)
+    
+endif(XSTLVerboseOutput)
+
+if(TARGET ${XSTL_TARGET})
+  message(STATUS "Added all header and implementation files.\n")
+endif(TARGET)
 
 
 #
 # Provide alias to library for
 #
 
-add_library(${PROJECT_NAME}::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
+add_library(zicx::${PROJECT_NAME_LOWERCASE} ALIAS ${XSTL_TARGET})
 
-verbose_message("Project is now aliased as ${PROJECT_NAME}::${PROJECT_NAME}.\n")
+verbose_message("Project is now aliased as zicx::${PROJECT_NAME_LOWERCASE}.\n")
 
 #
 # Set Target Properties
 #
 
 set_target_properties(
-    ${PROJECT_NAME}
-    PROPERTIES
-    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib/${CMAKE_BUILD_TYPE}"
-    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib/${CMAKE_BUILD_TYPE}"
-    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/${CMAKE_BUILD_TYPE}"
+  ${XSTL_TARGET}
+  PROPERTIES
+  LINKER_LANGUAGE CXX
+  ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib/${CMAKE_BUILD_TYPE}"
+  LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib/${CMAKE_BUILD_TYPE}"
+  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/${CMAKE_BUILD_TYPE}"
 )
+
 
 #
 # Set the build/user include directories
 #
 
 target_include_directories(
-    ${PROJECT_NAME}
-    INTERFACE
+    ${XSTL_TARGET}
+    PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>
-    $<BUILD_INTERFACE:${INC_DIR}>
-     $<BUILD_INTERFACE:${INC_DIR}/container>
 )
 
 message(STATUS "Finished setting up include directories.")
@@ -251,84 +253,41 @@ message(STATUS "Finished setting up include directories.")
 #
 
 if(BUILD_SHARED_LIBS)
-    message(STATUS "Building ${PROJECT_NAME} as a shared library")
-    target_compile_definitions(${PROJECT_NAME} INTERFACE -DBUILD_SHARED)
+    message(STATUS "Building ${XSTL_TARGET} as a shared library")
+    target_compile_definitions(${XSTL_TARGET} INTERFACE -DBUILD_SHARED)
 else()
-    message(STATUS "Building ${PROJECT_NAME} as a static library")
-    target_compile_definitions(${PROJECT_NAME} INTERFACE -DBUILD_STATIC)
-endif()
-
+    message(STATUS "Building ${XSTL_TARGET} as a static library")
+    target_compile_definitions(${XSTL_TARGET} INTERFACE -DBUILD_STATIC)
+endif(BUILD_SHARED_LIBS)
 
 ##################################################################################
 # Set the project standard and warnings
 ##################################################################################
 
-target_compile_features(${PROJECT_NAME} INTERFACE cxx_std_11)
+target_compile_features(${XSTL_TARGET} INTERFACE cxx_std_11)
 
 verbose_message("Applied compiler warnings. Using standard ${CMAKE_CXX_STANDARD}.\n")
 
 ##################################################################################
-##################################################################################
-
-#
 # Enable Doxygen
-#
+
+## TODO : Export xml docs
+##################################################################################
 
 # include(Doxygen)
 
 ##################################################################################
-##################################################################################
-
-#
-# Model project dependencies
-#
-
-# Identify and link with the specific "packages" the project uses
-#find_package(package_name package_version REQUIRED package_type [other_options])
-#target_link_libraries(
-#  ${PROJECT_NAME}
-#  PUBLIC
-#    dependency1 ...
-#  PRIVATE
-#    dependency2 ...
-#    ${PROJECT_NAME}_PROJECT_OPTIONS
-#    ${PROJECT_NAME}_PROJECT_WARNINGS
-#)
-#if(${PROJECT_NAME}_BUILD_EXECUTABLE AND ${PROJECT_NAME}_ENABLE_UNIT_TESTING)
-#  target_link_libraries(
-#    ${PROJECT_NAME}_LIB
-#    PUBLIC
-#      dependency1 ...
-#  )
-#endif()
-
-# For Windows, it is necessary to link with the MultiThreaded library.
-# Depending on how the rest of the project's dependencies are linked, it might be necessary
-# to change the line to statically link with the library.
-#
-# This is done as follows:
-#
-# set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
-#
-# On Linux and Mac this variable is ignored. If any issues rise from it, try commenting it out
-# and letting CMake decide how to link with it.
-#set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>DLL")
-
-verbose_message("Successfully added all dependencies and linked against them.")
-
-##################################################################################
-##################################################################################
-
-#
 # Install library for easy downstream inclusion
-#
+
+## TODO : Debug and test if it works as expected
+##################################################################################
 
 include(GNUInstallDirs)
 install(
   TARGETS
-  ${PROJECT_NAME}
+  ${XSTL_TARGET}
   EXPORT
-  ${PROJECT_NAME}Targets
+  XSTLTargets
   LIBRARY DESTINATION
   ${CMAKE_INSTALL_LIBDIR}
   RUNTIME DESTINATION
@@ -343,17 +302,19 @@ install(
 
 install(
   EXPORT
-  ${PROJECT_NAME}Targets
+  XSTLTargets
   FILE
-  ${PROJECT_NAME}Targets.cmake
+  XSTLTargets.cmake
   NAMESPACE
-  ${PROJECT_NAME}::
+  xstl::
   DESTINATION
-  ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}
+  ${CMAKE_INSTALL_LIBDIR}/cmake/XSTL
 )
 
 ##################################################################################
 # Install the `include` directory
+
+## TODO : Debug and test if it works as expected
 ##################################################################################
 
 install(
@@ -367,6 +328,9 @@ verbose_message("Install targets successfully built. Install with `cmake --build
 
 ##################################################################################
 # Quick `ConfigVersion.cmake` creation
+
+## TODO : Debug and test if it works as expected
+## TODO : install src files
 ##################################################################################
 
 include(CMakePackageConfigHelpers)
@@ -379,27 +343,29 @@ write_basic_package_version_file(
 )
 
 configure_package_config_file(
-  ${CMAKE_CURRENT_LIST_DIR}/scripts/cmake/${PROJECT_NAME}Config.cmake.in
-  ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake
+  ${CMAKE_CURRENT_LIST_DIR}/scripts/cmake/Config.cmake.in
+  ${CMAKE_CURRENT_BINARY_DIR}/XSTLConfig.cmake
   INSTALL_DESTINATION
-  ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}
+  ${CMAKE_INSTALL_LIBDIR}/cmake/XSTL
 )
 
 install(
   FILES
-  ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake
-  ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake
+  ${CMAKE_CURRENT_BINARY_DIR}/XSTLConfig.cmake
+  ${CMAKE_CURRENT_BINARY_DIR}/XSTLConfigVersion.cmake
   DESTINATION
-  ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}
+  ${CMAKE_INSTALL_LIBDIR}/cmake/XSTL
 )
 
 ##################################################################################
 # Generate export header if specified
+
+# TODO : Debug and test if it works as expected
 ##################################################################################
 
 if(GenerateExportHeader)
   include(GenerateExportHeader)
-  generate_export_header(${PROJECT_NAME})
+  generate_export_header(${XSTL_TARGET})
   install(
     FILES
     ${PROJECT_BINARY_DIR}/${PROJECT_NAME_LOWERCASE}_export.h
@@ -414,12 +380,12 @@ message(STATUS "Finished building requirements for installing the package.\n")
 
 ##################################################################################
 # Unit testing setup
+
 ##################################################################################
 
-if(EnableTesting)
+if(XSTLEnableTesting)
+  add_subdirectory(libs/gtest)
   enable_testing()
   message(STATUS "Build unit tests for the project. Tests should always be found in the test folder\n")
   add_subdirectory(test)
 endif()
-
-
