Updated tests to use doctest instead

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -65,17 +65,9 @@ endif()
 # source : https://github.com/nlohmann/json/blob/develop/tests/CMakeLists.txt
 ##################################################################################
 
-#
-# Load the desired unit testing framework
-#
-
-include(GoogleTest)
-
-set(GOOGLE_MOCK_LIBRARIES GTest::gmock GTest::gmock_main)
-
 verbose_message("Adding tests ...")
 
-file(GLOB TEST_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/src/*.c ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cc)
+file(GLOB_RECURSE TEST_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cc)
 
 foreach(file ${TEST_SRCS})
     get_filename_component(TEST_NAME ${file} NAME_WE)
@@ -107,18 +99,14 @@ foreach(file ${TEST_SRCS})
     target_link_libraries(
         ${TEST_NAME}
         zicx::xstl
-        GTest::gtest_main
-    #    Only if needed, uncomment line below
-    #    ${GOOGLE_MOCK_LIBRARIES}
     )
     
 
     #
     # Add the unit tests
     #
-    #add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})  
-    gtest_discover_tests(${TEST_NAME})
-
+    #doctest_add_test(NAME ${TEST_NAME} COMMAND  $<TARGET_FILE:${TEST_NAME}>)  
+    doctest_discover_tests(${TEST_NAME} -v)
 
 endforeach()
 
