--- a/test/examples/array/CMakeLists.txt
+++ b/test/examples/array/CMakeLists.txt
@@ -6,3 +6,4 @@ add_executable(array_example main.cpp)
 
 target_link_libraries(array_example PRIVATE zicx::xstl)
 
+target_include_directories(array_example PRIVATE ${CMAKE_SOURCE_DIR}/test/include)
