--- a/.github/workflows/windows.yaml
+++ b/.github/workflows/windows.yaml
@@ -47,10 +47,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Run CMake
-      run: cmake -S . -B build -G "Visual Studio 16 2019" -A ${{ matrix.architecture }} -DXSTLEnableTesting=On -DCMAKE_CXX_FLAGS="/W4"
+      run: cmake -S . -B build -G "Visual Studio 16 2019" -A ${{ matrix.architecture }} -DXSTLEnableTesting=On -DCMAKE_CXX_FLAGS="/W4 /EHsc"
       if: matrix.build_type == 'Release'
     - name: Run CMake
-      run: cmake -S . -B build -G "Visual Studio 16 2019" -A ${{ matrix.architecture }} -DXSTLEnableTesting=On -DCMAKE_CXX_FLAGS="/W4"
+      run: cmake -S . -B build -G "Visual Studio 16 2019" -A ${{ matrix.architecture }} -DXSTLEnableTesting=On -DCMAKE_CXX_FLAGS="/W4 /EHsc"
       if: matrix.build_type == 'Debug'
     - name: Build
       run: cmake --build build --config ${{ matrix.build_type }} --parallel 10
@@ -63,7 +63,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Run CMake
-      run: cmake -S . -B build -G "Visual Studio 16 2019" -DXSTLEnableTesting=On -DCMAKE_CXX_FLAGS="/permissive- /std:c++latest /utf-8 /W4"
+      run: cmake -S . -B build -G "Visual Studio 16 2019" -DXSTLEnableTesting=On -DCMAKE_CXX_FLAGS="/permissive- /std:c++latest /utf-8 /W4 /EHsc"
     - name: Build
       run: cmake --build build --config Release --parallel 10
     - name: Test
@@ -95,7 +95,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Run CMake
-      run: cmake -S . -B build -G "Visual Studio 17 2022" -DXSTLEnableTesting=On -DCMAKE_CXX_FLAGS="/permissive- /std:c++latest /utf-8 /W4"
+      run: cmake -S . -B build -G "Visual Studio 17 2022" -DXSTLEnableTesting=On -DCMAKE_CXX_FLAGS="/permissive- /std:c++latest /utf-8 /W4 /EHsc"
     - name: Build
       run: cmake --build build --config Release --parallel 10
     - name: Test
