--- a/.github/workflows/windows.yaml
+++ b/.github/workflows/windows.yaml
@@ -79,10 +79,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Run CMake
-      run: cmake -S . -B build -G "Visual Studio 17 2022" -A ${{ matrix.architecture }} -DXSTLEnableTesting=On -DCMAKE_CXX_FLAGS="/W4"
+      run: cmake -S . -B build -G "Visual Studio 17 2022" -A ${{ matrix.architecture }} -DXSTLEnableTesting=On -DCMAKE_CXX_FLAGS="/W4 /EHsc"
       if: matrix.build_type == 'Release'
     - name: Run CMake
-      run: cmake -S . -B build -G "Visual Studio 17 2022" -A ${{ matrix.architecture }} -DXSTLEnableTesting=On -DCMAKE_CXX_FLAGS="/W4"
+      run: cmake -S . -B build -G "Visual Studio 17 2022" -A ${{ matrix.architecture }} -DXSTLEnableTesting=On -DCMAKE_CXX_FLAGS="/W4 /EHsc"
       if: matrix.build_type == 'Debug'
     - name: Build
       run: cmake --build build --config ${{ matrix.build_type }} --parallel 10
